k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gospeed
  labels:
    app.kubernetes.io/name: gospeed
